
package VoteSystem.Protocol;

enum NotificationType { type_dummy = 1; }
enum NotificationTypeMask { Unknown = 0; }

message ProtocolVersion {}
message LiveData {}
message LiveRoomData {}
message LiveAttribute {}
message Notification {}
